# aoc2024-haskell

1/: main  main.hi  main.hs  parttwo  parttwo.hi  parttwo.hs
2/: first.hs  second.hs
3/: LICENSE  first.hs  x3.cabal
3/app/: Main.hs
3/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
4/: first.hs
