cabal-version:      3.0
name:               x3
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             hokul
maintainer:         hokulis@outlook.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable x3
    import:           warnings
    main-is:          Main.hs
    -- other-modules: 
    -- other-extensions:
    build-depends:    
      base ^>=4.17.2.1,
      regex-tdfa ^>=1.3.2.2
          
    hs-source-dirs:   app
    default-language: Haskell2010
